objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Development</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Entitlement</fullName>
        </values>
        <values>
            <fullName>Finance Diligence and Mktg</fullName>
        </values>
        <values>
            <fullName>LOI Signed</fullName>
        </values>
        <values>
            <fullName>MIPA Signed</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Option Lease Executed</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Ready for Market</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>O%26M</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Discover</fullName>
        </values>
        <values>
            <fullName>Disqualified - Sales</fullName>
        </values>
        <values>
            <fullName>Disqualified - Technical</fullName>
        </values>
        <values>
            <fullName>Engage</fullName>
        </values>
        <values>
            <fullName>Identify</fullName>
        </values>
        <values>
            <fullName>Negotiate</fullName>
        </values>
        <values>
            <fullName>No Decision</fullName>
        </values>
        <values>
            <fullName>Propose</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Offtaker</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Disqualified - Sales</fullName>
        </values>
        <values>
            <fullName>Disqualified - Technical</fullName>
        </values>
        <values>
            <fullName>No Decision</fullName>
        </values>
        <values>
            <fullName>Project Awarded</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standalone Storage</fullName>
        <description>standalone ESD opportunity/not part of EPC</description>
        <isActive>true</isActive>
        <values>
            <fullName>Entitlement</fullName>
        </values>
        <values>
            <fullName>Finance Diligence and Mktg</fullName>
        </values>
        <values>
            <fullName>LOI Signed</fullName>
        </values>
        <values>
            <fullName>MIPA Signed</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Option Lease Executed</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Ready for Market</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Disqualified - Sales</fullName>
        </values>
        <values>
            <fullName>Disqualified - Technical</fullName>
        </values>
        <values>
            <fullName>No Decision</fullName>
        </values>
        <values>
            <fullName>Preliminary 7C</fullName>
        </values>
        <values>
            <fullName>Project Awarded</fullName>
        </values>
        <values>
            <fullName>Proposal Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Shortlisted%2FInterviews</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AHJ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AHJ</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (AHJ)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APN__c</fullName>
        <inlineHelpText>Assessors Parcel Number</inlineHelpText>
        <label>APN</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acceptedinto7C__c</fullName>
        <inlineHelpText>pulls in date of 7C acceptance from CC submittals</inlineHelpText>
        <label>Accepted into 7C from CC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Summary of the Opportunity Product Line’s&apos; Tax Amount fields</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total_with_Tax__c</fullName>
        <formula>Amount +  AcctSeed__Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Grand Total for Opportunity.</inlineHelpText>
        <label>Total with Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Charges2__c</fullName>
        <inlineHelpText>Enter any additional charges that are included in the contract</inlineHelpText>
        <label>Additional Charges</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Charges__c</fullName>
        <description>These are additional charges that are not going to be included in the total contract price and payment schedules.</description>
        <label>Additional Charges</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permit</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Excavation</fullName>
                </value>
                <value>
                    <fullName>Prevailing Wages</fullName>
                </value>
                <value>
                    <fullName>Other (Check with EC)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Cost__c</fullName>
        <label>Additional Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Development_Margin_Commission__c</fullName>
        <formula>Additional_Development_Margin__c * Total_Commission_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Development Margin Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Development_Margin__c</fullName>
        <inlineHelpText>Additional Development Margin from Pricing Tool- required at Contract Signed</inlineHelpText>
        <label>Additional Development Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_System_Size__c</fullName>
        <formula>Project_System_Size__c - Original_Contract_System_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted System Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aerial_Thermal_Inspection__c</fullName>
        <label>Aerial (Thermal) Inspection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AffiliateFee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Affiliate Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Affiliate_Fee_W__c</fullName>
        <formula>AffiliateFee__c / Original_Contract_System_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Affiliate Fee / System Size</inlineHelpText>
        <label>Affiliate Fee $/W</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_and_Project_Contract_Equal__c</fullName>
        <formula>IF( AND( RecordTypeId =&quot;012340000007kaK&quot;,
ISPICKVAL(StageName, &quot;Contract Signed&quot;),  Final_Contract_Price__c &lt;&gt;  Project_Current_Contract_Price_Roll_Up__c ), &quot;No&quot;, 
IF(AND( RecordTypeId =&quot;012340000007kaK&quot;,
NOT(ISPICKVAL(StageName, &quot;Contract Signed&quot;)),   Amount  &lt;&gt;  Project_Current_Contract_Price_Roll_Up__c ), &quot;No&quot;,
IF(AND( RecordTypeId =&quot;012340000007ka0&quot;,
OR(ISPICKVAL(StageName, &quot;EPC Signed&quot;), ISPICKVAL(StageName, &quot;Project Booked&quot;)),  Final_Contract_Price__c &lt;&gt;  Project_Current_Contract_Price_Roll_Up__c ), &quot;No&quot;,
IF(AND( RecordTypeId =&quot;012340000007ka0&quot;,
OR(NOT(ISPICKVAL(StageName, &quot;EPC Signed&quot;)), NOT(ISPICKVAL(StageName, &quot;Project Booked&quot;))),  Amount &lt;&gt;  Project_Current_Contract_Price_Roll_Up__c ), &quot;No&quot;,
&quot;YES&quot;))))</formula>
        <inlineHelpText>012340000007kaK</inlineHelpText>
        <label>Amount and Project Contract Equal?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_kWh_usage__c</fullName>
        <label>Annual kWh usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedFRwatt__c</fullName>
        <inlineHelpText>rolls up the approved finance request $/watt</inlineHelpText>
        <label>Approved FR $/watt</label>
        <summarizedField>Finance_Request__c.EPC_Price_Watt__c</summarizedField>
        <summaryFilterItems>
            <field>Finance_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Request__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approved_Finance_Requests__c</fullName>
        <label>Approved Finance Requests</label>
        <summaryFilterItems>
            <field>Finance_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Finance_Request__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approximate_Energy_Credit_Appetite_mWh__c</fullName>
        <label>Approximate Energy Credit Appetite (kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approximate_Financing_Close_Date__c</fullName>
        <label>Approximate Financing Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approximate_Install_Date__c</fullName>
        <description>This is the approximate date that customer expects that installation will begin.</description>
        <inlineHelpText>Required at Project Awarded- This is the approximate date that customer expects that installation will begin.</inlineHelpText>
        <label>Approximate Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apps_Engineer_Logged_in__c</fullName>
        <description>used to create custom list views, no need to be on layouts, presents a 1 if apps enginner logged in matches field Apps Engineer Assigned</description>
        <formula>IF( Assigned_Apps_Engineer__c = $User.Id , 1 , 

0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used to create custom list views, no need to be on layouts, presents a 1 if apps enginner logged in matches field Apps Engineer Assigned</inlineHelpText>
        <label>Apps Engineer Logged in</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_13_14_Project_Size__c</fullName>
        <formula>IF( 
AND( 
CloseDate &gt;= DATE(2013, 04, 01), 
CloseDate &lt;= DATE(2014, 04, 30) 
), 
 Project_System_Size__c , 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apr 13-14 Project Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asking_Price__c</fullName>
        <label>Asking Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessed_for_Energy_Storage__c</fullName>
        <inlineHelpText>Tracks whether this Opportunity has been assessed for energy storage</inlineHelpText>
        <label>Assessed for Energy Storage?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Apps_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto-populated on Opportunity creation based on Team field by Opportunity Apps Engineer Assignment PB</description>
        <inlineHelpText>this is a field that will auto-populate the appropriate apps engineer based on the opportunity owner</inlineHelpText>
        <label>Assigned Apps Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associate_Project_Developer__c</fullName>
        <label>Associate Project Developer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assumed_Non_IX_Sales_W__c</fullName>
        <label>Assumed Non-IX Sales $/W</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__request__c</fullName>
        <label>Invoice Messaging</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Available_Area__c</fullName>
        <inlineHelpText>Available area for lease: Enter number of acres, available sq footage, etc</inlineHelpText>
        <label>Available Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_High_Temp__c</fullName>
        <label>Average High Temp</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award_to_Close__c</fullName>
        <formula>CloseDate - Project_Awarded_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BSS_Spec_Yield__c</fullName>
        <description>Specific yield for Production Modelling in Borrego Solar Standard Stage</description>
        <label>BSS Spec Yield</label>
        <summarizedField>Production_Modeling__c.Specific_Yield_kWh_kWp2__c</summarizedField>
        <summaryFilterItems>
            <field>Production_Modeling__c.Production_Modeling_Stage__c</field>
            <operation>equals</operation>
            <value>Borrego Solar Standard</value>
        </summaryFilterItems>
        <summaryForeignKey>Production_Modeling__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Best_And_Final_Offer_Submitted_Date__c</fullName>
        <label>Best And Final Offer Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <description>date field auto populated by workflow related to change in stage to Project Booked or Contract signed</description>
        <inlineHelpText>- Development opportunity: Date the opp moves to the stage &quot;Project Booked.&quot; 
- Captive/onsite and WDG: Date the opp moves to &quot;Contract Signed.&quot;</inlineHelpText>
        <label>Solar Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bookings_Value__c</fullName>
        <description>Removed per EPC/Dev Oppty revamp, still used for reporting.</description>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Removed per EPC/Dev Oppty revamp, still used for reporting.</inlineHelpText>
        <label>Bookings Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Box_Folders__c</fullName>
        <label>Box Folders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Box_Most_Recent_Error__c</fullName>
        <label>Box Most Recent Error</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>State used for reporting and allocation</description>
        <inlineHelpText>State used for reporting and allocation</inlineHelpText>
        <label>State</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Opportunity Branch value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Opportunities (Branch)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budgetary_Proposal_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked then the date it was sent should be filled in below.</inlineHelpText>
        <label>Budgetary Proposal Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Code__c</fullName>
        <label>Building Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD__c</fullName>
        <inlineHelpText>commercial operation date: allow us to track the age of each installation so measure which are coming to the close of their 5 or 10 year</inlineHelpText>
        <label>COD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Orders__c</fullName>
        <inlineHelpText>Amount of all Approved Change Orders- from the Change Order object</inlineHelpText>
        <label>Change Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City_Town__c</fullName>
        <description>Indicate if the city/town has opted out or not from the NY State Section 487 Renewable Energy Tax Exemption.  State-published lists of jurisdiction opt-out status should be verified by calling AHJs.</description>
        <inlineHelpText>Indicate if the city/town has opted out or not from the NY State Section 487 Renewable Energy Tax Exemption.  State-published lists of jurisdiction opt-out status should be verified by calling AHJs.</inlineHelpText>
        <label>City/Town</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opted Out</fullName>
                </value>
                <value>
                    <fullName>Not Opted Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Date_Option__c</fullName>
        <description>This field will be used in a report to help track when new O&amp;M projects are coming &quot;under management&quot;</description>
        <inlineHelpText>Select one of the values to be used in a report to help track when new O&amp;M projects are coming &quot;under management&quot;</inlineHelpText>
        <label>Commencement Date Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requires notice from client</fullName>
                </value>
                <value>
                    <fullName>Notice of Final Completion from Borrego PM</fullName>
                </value>
                <value>
                    <fullName>As soon as reasonably possible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Cost__c</fullName>
        <label>Commission Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Percent_Cap__c</fullName>
        <defaultValue>0.03</defaultValue>
        <label>Commission Percent Cap</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commissions_Paid__c</fullName>
        <description>This is the amount of money that has been paid to date in comisions.</description>
        <label>Commissions Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Community_Solar__c</fullName>
        <description>Used in Validation rule on the Offtaker Opportunity. Required at the Qualified Stage</description>
        <inlineHelpText>Required at the Qualified Stage</inlineHelpText>
        <label>Community Solar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Solars__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Solar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comprehensive_Offering_kW__c</fullName>
        <label>Comprehensive Offering ($/kW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concrete_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Concrete Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Financing__c</fullName>
        <inlineHelpText>Construction Financing amount from Pricing Tool- Required at Contract Signed</inlineHelpText>
        <label>Construction Financing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Roles_Created__c</fullName>
        <label>Contact Roles Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Already_Created__c</fullName>
        <label>Contract Already Created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Amount_yearly__c</fullName>
        <inlineHelpText>Total Yearly Amount of the Service Contract</inlineHelpText>
        <label>Contract Amount (yearly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Contingencies__c</fullName>
        <label>Contract Contingencies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Margin__c</fullName>
        <label>Contract Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Production_Requirement__c</fullName>
        <label>Contract Production Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Review_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contract Review Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Sponsor__c</fullName>
        <label>Contract Sponsor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined</fullName>
                    <default>true</default>
                    <label>Not Defined</label>
                </value>
                <value>
                    <fullName>Bill Bush</fullName>
                </value>
                <value>
                    <fullName>Ned Dewitt</fullName>
                </value>
                <value>
                    <fullName>Aaron Hall</fullName>
                </value>
                <value>
                    <fullName>Mike Hall</fullName>
                </value>
                <value>
                    <fullName>Brendan Neagle</fullName>
                </value>
                <value>
                    <fullName>Zac Christie</fullName>
                </value>
                <value>
                    <fullName>Sam Chatterjee</fullName>
                </value>
                <value>
                    <fullName>Faris Matin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_To_Be_Signed_On__c</fullName>
        <inlineHelpText>Date by which you need the contract.</inlineHelpText>
        <label>Contract To Be Signed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Types_Included__c</fullName>
        <inlineHelpText>Enter the types of contracts included in this Opportunity</inlineHelpText>
        <label>Contract Types Included</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>SLA</fullName>
                </value>
                <value>
                    <fullName>Owner/Offtaker</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Basic with Reactive</fullName>
                </value>
                <value>
                    <fullName>Performance Service</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>No Contract - Service Only</fullName>
                </value>
                <value>
                    <fullName>MIPA</fullName>
                </value>
                <value>
                    <fullName>PSA</fullName>
                </value>
                <value>
                    <fullName>SLPA/SPA</fullName>
                </value>
                <value>
                    <fullName>GIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_for_Added_Landscaping_per_Visit__c</fullName>
        <label>Cost for Added Landscaping per Visit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_for_Added_Module_Washing_per_Wash__c</fullName>
        <label>Cost for Added Module Washing per Wash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_for_Added_Snow_Removal_per_Visit__c</fullName>
        <label>Cost for Added Snow Removal per Visit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CountofSSSPricingRequests__c</fullName>
        <inlineHelpText>used for report with subs</inlineHelpText>
        <label>Count of SSS Pricing Requests</label>
        <summaryFilterItems>
            <field>Pricing_Tool_Approval__c.IncludesSSS__c</field>
            <operation>notEqual</operation>
            <value>0,</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Tool_Approval__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Indicate if the county has opted out or not from the NY State Section 487 Renewable Energy Tax Exemption.  State-published lists of jurisdiction opt-out status should be verified by calling AHJs.</description>
        <inlineHelpText>Indicate if the county has opted out or not from the NY State Section 487 Renewable Energy Tax Exemption.  State-published lists of jurisdiction opt-out status should be verified by calling AHJs.</inlineHelpText>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opted Out</fullName>
                </value>
                <value>
                    <fullName>Not Opted Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_after_MQA__c</fullName>
        <formula>IF(OR(DATEVALUE(CreatedDate) &gt; Account.First_Date_Marketing_Qualified__c,DATEVALUE(CreatedDate)= Account.First_Date_Marketing_Qualified__c)  , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created after MQA?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approved_Production_Models__c</fullName>
        <label>Current Approved Production Models</label>
        <summaryFilterItems>
            <field>Production_Modeling__c.Status__c</field>
            <operation>equals</operation>
            <value>Current Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Production_Modeling__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>